--- a/src/templates/egresos.html
+++ b/src/templates/egresos.html
@@ -6,7 +6,7 @@
     {% block content %}
         <div class="col-md-12 container">
             <h3 class="text-left subtitulo mt-3">Egresos</h3>
-            <div class="card-contenedor mb-5"> 
+            <div class="card-contenedor mb-3"> 
                 <div class="card-body">
                     <form action="{{ url_for('egresos')}}" method="POST">
                         <div class="row mb-3">
@@ -101,6 +101,7 @@
                     {% endif %}
                     {% endwith %}
                 </div>
+            </div>
                 <div class="row mb-3">
                     <div class="form-inline">
                         <input type="text" class="form-control" id="busquedaInput" placeholder="Buscar alumno">
@@ -212,37 +213,48 @@
                         </div>
                         {% endfor %}
                         <script>
-// Obtener el campo de búsqueda y la tabla
-var busquedaInput = document.getElementById('busquedaInput');
-var tablaEgresos = document.querySelector('.table');
+                               // Obtener el campo de búsqueda y la tabla
+            var busquedaInput = document.getElementById('busquedaInput');
+            var tablaAlumnos = document.querySelector('.table');
+            
+            // Agregar un evento de escucha para la entrada del usuario
+            busquedaInput.addEventListener('input', function() {
+                var consulta = busquedaInput.value.toLowerCase();
+            
+                // Obtener todas las filas de la tabla
+                var filas = tablaAlumnos.querySelectorAll('tbody tr');
+            
+                // Iterar a través de las filas y celdas y ocultar/mostrar según la consulta
+                for (var i = 0; i < filas.length; i++) {
+                    var fila = filas[i];
+                    var mostrarFila = false;
+            
+                    // Obtener todas las celdas de la fila
+                    var celdas = fila.querySelectorAll('td');
+            
+                    // Iterar a través de las celdas y verificar si alguna contiene la consulta
+                    for (var j = 0; j < celdas.length; j++) {
+                        var celda = celdas[j];
+                        var contenidoCelda = celda.textContent.toLowerCase();
+            
+                        if (contenidoCelda.includes(consulta)) {
+                            mostrarFila = true; // Mostrar la fila si se encuentra una coincidencia
+                            break; // No es necesario verificar otras celdas una vez que se encuentra una coincidencia
+                        }
+                    }
+            
+                    if (mostrarFila) {
+                        fila.style.display = ''; // Mostrar la fila
+                    } else {
+                        fila.style.display = 'none'; // Ocultar la fila si no hay coincidencias
+                    }
+                }
+            });
 
-// Agregar un evento de escucha para la entrada del usuario
-busquedaInput.addEventListener('input', function() {
-    var consulta = busquedaInput.value.toLowerCase(); // Convertir consulta a minúsculas
-
-    // Obtener todas las filas de la tabla
-    var filas = tablaEgresos.querySelectorAll('tbody tr');
-
-    // Iterar a través de las filas y ocultar/mostrar según la consulta
-    for (var i = 0; i < filas.length; i++) {
-        var fila = filas[i];
-        var servicios = fila.querySelector('td:nth-child(2)').textContent.toLowerCase(); // Convertir servicios a minúsculas
-        var fecha_Pago = fila.querySelector('td:nth-child(3)').textContent.toLowerCase(); // Convertir fecha_Pago a minúsculas
-        var monto = fila.querySelector('td:nth-child(4)').textContent.toLowerCase(); // Convertir monto a minúsculas
-        var medios_de_pago = fila.querySelector('td:nth-child(5)').textContent.toLowerCase(); // Convertir medios_de_pago a minúsculas
-
-        if (servicios.includes(consulta) || fecha_Pago.includes(consulta) || monto.includes(consulta) || medios_de_pago.includes(consulta)) {
-            fila.style.display = ''; // Mostrar la fila
-        } else {
-            fila.style.display = 'none'; // Ocultar la fila
-        }
-    }
-});
-
-                            </script>
+                        </script>
                     </tbody>
                 </table>
-        </div>
+       
     </div>
     {% endblock %}
 </body>
