--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -201,6 +201,8 @@ body {
 .form-control{
   width: 11em !important;
   height: 1.8em;
+  padding: 0 !important;
+  padding-left: 0.5rem !important;
 }
 .btn-eliminar{
   background-color: #FBD374;
