--- a/src/templates/agenda.html
+++ b/src/templates/agenda.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 <head>
-    {% block title %}Egresos{% endblock %}
-    <title>Agenda</title>
+    {% block title %}Agenda{% endblock %}
 </head>
 <body>
     <div class="calendar">
