--- a/src/templates/agenda.html
+++ b/src/templates/agenda.html
@@ -25,6 +25,7 @@
             <tbody id="calendar-body"></tbody>
         </table>
     </div>
-    <script src="script.js"></script>
+    <script src="templates/js/script.js"></script>
+
     {% endblock %}
 </body>
