--- a/src/templates/agenda.html
+++ b/src/templates/agenda.html
@@ -33,7 +33,7 @@
         </table>
     </div>
     
-    <script src="../templates/js/script.js"></script>
+    <script src="/static/js/script.js"></script>
     
     {% endblock %}
 </body>
