--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -38,17 +38,17 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{url_for('resumen')}}">
+                <a class="nav-link" href="{{url_for('caja')}}">
                     Caja
                 </a> 
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{url_for('resumen')}}">
+                <a class="nav-link" href="{{url_for('caja')}}">
                     Agenda
                 </a> 
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{url_for('resumen')}}">
+                <a class="nav-link" href="{{url_for('caja')}}">
                     Pagos
                 </a> 
               </li>
