--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -108,9 +108,9 @@
             </a>
         </div>
         <div class="menu-item">
-            <a href="{{ url_for('resumen') }}">
-            <h3>resumen</h3>
-            <img src="static/img/Egresos.jpeg" alt="resumen">
+            <a href="{{ url_for('caja') }}">
+            <h3>caja</h3>
+            <img src="static/img/Egresos.jpeg" alt="Caja">
             </a>
         </div>
     </div>
