--- a/src/templates/inicio.html
+++ b/src/templates/inicio.html
@@ -46,7 +46,7 @@
        
             <div class="col-md-4 justify-content-center align-content-center">
                 <div class="card p-4 mb-2 mx-auto d-flex flex-column justify-content-center" >
-                    <a class="link-home" href="{{ url_for('Caja') }}">
+                    <a class="link-home" href="{{ url_for('caja') }}">
                         <h5 class="card-title">Caja</h5>
                         <img src="static/img/caja.svg" class="card-img-top" alt="...">     
                     </a>
