--- a/src/templates/agenda.html
+++ b/src/templates/agenda.html
@@ -37,4 +37,12 @@
     
     {% endblock %}
 </body>
+<div id="myModalagenda" class="modalagenda">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <p>Contenido del modal aquí...</p>
+    </div>
+</div>
+
+
 </html>
