--- a/src/templates/agenda.html
+++ b/src/templates/agenda.html
@@ -26,10 +26,13 @@
         </table>
     </div>
 
-       <div id="myModal" class="modal">
+    <div id="myModal" class="modal">
         <div class="modal-content">
-            <span class="close">&times;</span>
-            <div id="modal-content"></div>
+            <span class="close" id="modal-close-button">&times;</span>
+            <button id="custom-close-button">Cerrar</button>
+            <table id="horarios-table">
+                <!-- Contenido de la tabla se generará dinámicamente aquí -->
+            </table>
         </div>
     </div>
 
