--- a/src/templates/ingresos.html
+++ b/src/templates/ingresos.html
@@ -13,14 +13,20 @@
                     <form action="{{ url_for('ingresos')}}" method="POST">
                         <div class="row mb-3">
                             <div class="col-md-3 col-sm-12">
-                                <label class="label-form" for="nombre_alumno">Nombre</label>
-                                <select class="form-control" name="nombre_alumno" id="nombre_alumno" class="form-control mb-3">
-                                    {% for alumno in nombres_apellidos %}
-                                        <option value="{{ alumno }}">{{ alumno }}</option>
-                                    {% endfor %}
-                                </select>
-                                
-                            </div>
+                                <label class="label-form label-with-arrow">
+                                    Nombre <span class="campo-obligatorio">*</span>
+                                    <div class="select-container">
+                                        <select class="form-control mb-3" name="nombre_alumno" id="nombre_alumno" class="form-control mb-3">
+                                            {% for alumno in nombres_apellidos %}
+                                                <option value="{{ alumno }}">{{ alumno }}</option>
+                                            {% endfor %}
+                                        </select>
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-fill" viewBox="0 0 16 16">
+                                            <path d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"/>
+                                        </svg>
+                                    </div>
+                                </label>
+                            </div>                            
                             <div class="col-md-3 col-sm-12">
                                 <label class="label-form">Fecha de pago <span class="campo-obligatorio">*</span></label>
                                 <input type="date" class="form-control mb-3" name="fecha_pago" required value="{{ form_data.fecha_pago if form_data else '' }}">
