--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -64,7 +64,11 @@ body {
   align-items: center !important;
   text-align: center !important;
 }
-
+.alert{
+  background-color: #8b8b8b;
+  color: #f0f0f0;
+  margin-top: 10rem;
+}
 /*Home*/
 
 .navbar {
@@ -274,6 +278,24 @@ body {
       font-size: 16px;
   }
 }
+
+
+  /* Mensaje de error */
+
+  .error-message {
+    display: none;
+    position: absolute;
+    background-color: #ffcccc;
+    color: #ff0000;
+    padding: 5px;
+    border: 1px solid #ff0000;
+    border-radius: 4px;
+    margin-top: -5.2rem; 
+    margin-left: 0; 
+    font-size: 14px;
+}
+
+
 
 
 
