--- a/src/templates/inicio.html
+++ b/src/templates/inicio.html
@@ -4,6 +4,7 @@
 <head>
     <title>Inicio</title>
     <meta charset="UTF-8"> 
+    <link rel="icon" href="/static/img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">   
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -16,6 +17,10 @@
             <img src="/static/img/logo.png" alt="Logo">
         </a>
         <h5 class="titulo">Bienvenido</h5>
+        <div class="text-center ">
+            <a class="nav-link" href="{{ url_for('logout') }}">Cerrar Sesión</a>  
+          </div>
+      </div>
     </div>
     <div class="container text-center d-flex"> 
         <div class="row justify-content-center align-items-center">
