--- a/src/templates/agenda.html
+++ b/src/templates/agenda.html
@@ -11,6 +11,22 @@
       <span id="next-month">&#9655;</span>
     </div>
 
+    <table class="calendar-table">
+        <thead>
+            <tr>
+                <th>Domingo</th>
+                <th>Lunes</th>
+                <th>Martes</th>
+                <th>Miércoles</th>
+                <th>Jueves</th>
+                <th>Viernes</th>
+                <th>Sábado</th>
+            </tr>
+        </thead>
+        <tbody id="calendar-body"></tbody>
+    </table>
+</div>
+
     <div id="myModal" class="modal">
         <div class="modal-content">
             <span class="close" id="modal-close-button">&times;</span>
